# QtSimpleImageViewer

./: .gitignore  README.md
src/: CMakeLists.txt  ImageViewer.pro  SimpleQtImageViewer.pro  asyncimageloader.cpp  asyncimageloader.h  cropwidget.cpp  cropwidget.h  imageslistmodel.cpp  imageslistmodel.h  imageviewer.cpp  imageviewer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  ui_mainwindow.h
src/image_utils/: autocropborder.cpp  autocropborder.h  image_utils.cpp  image_utils.h
